argo/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devtools-demo
  namespace: devtools-demo
spec:
  selector:
    app: devtools-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
